.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bootcampjs-api
spec:
  clusterIP: None
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: bootcampjs-api
