.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bootcampjs-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - example.fr
  rules:
    - host: example.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bootcampjs-api
                port:
                  number: 8080
